--- a/index.html
+++ b/index.html
@@ -103,6 +103,9 @@
     <button class="btn btn-yes" onclick="answer(true)">Yes 💖</button>
     <button class="btn btn-no" onclick="answer(false)">No 😢</button>
   </div>
+  <div style="position: absolute; bottom: 30px; width: 100%; text-align: center; font-size: 64px; color: #a70b94;">
+  Keerthana
+</div>
 
   <script>
     function answer(isYes) {
